Migrated scrollbar to avoid tabs shifting

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html {
 #nav-bar,
 #footer {
     background-color: #f3f3f3;
+    z-index: 100;
 }
 
 html,
@@ -51,10 +52,16 @@ body {
 
     display: block;
 
-    margin-left:   auto;
-    margin-right:  auto;
-    margin-top:    44px;
-    margin-bottom: 41px;
+    position: fixed;
+
+    left:    0px;
+    right:   0px;
+    top:    44px;
+    bottom: 41px;
+
+    overflow-y: auto;
+
+    z-index: 10;
 
     /* border: 0px solid rgba(0, 0, 0, 0.12);*/
     /* border-width: 1px 0px;*/
